--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Ashley's 21st Birthday</title>
   <link href="./output.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.cdnfonts.com/css/christmas-classica" rel="stylesheet">
+                
 </head>
 
 <body>
@@ -33,7 +35,7 @@
             <a class="desc animate-on-scroll">Cheers to 21 years! <br>Join me in celebrating this once-in-a-lifetime milestone!</a>
           </div>
           <div class="BottomContainer">
-            <p class="details animate-on-scroll">26/12/2024</p>
+            <p class="details animate-on-scroll">26 / 12 / 2024</p>
             <p class="details2 animate-on-scroll">Stay at AquaVista Homes</p>
             <p class="details3 animate-on-scroll">
               5 Jalan NPT 7/1L<br />
@@ -51,9 +53,9 @@
     <div class="page" id="page2">
       <div class="background2">
         <div class="textContainer">
-          <h1 class="animate-on-scroll animate-h1">Arrive Early, Celebrate Longer</h1>
+          <h1 class="CountdownH1 animate-on-scroll animate-h1">Arrive Early,<br> Celebrate Longer</h1>
           <div class="stickers animate-on-scroll animate-stickers">🌟🎉✨</div>
-          <p class="animate-on-scroll animate-p">
+          <p class="countdownDes animate-on-scroll animate-p">
             The party’s start at 7:30pm, and you won’t want to miss a minute of the fun! Be there on time and let’s make my
             21st unforgettable!
           </p>
@@ -102,6 +104,9 @@
           <h1 class="Christmas animate-on-scroll animate-christmas">Celebrate with a Gift Exchange!</h1>
           <div class="imageContainer4 animate-on-scroll animate-imageContainer4">
             <img src="images/Christmas.jpeg" />
+          </div>
+          <div class="imageContainer6 animate-on-scroll animate-imageContainer4">
+            <img src="images\cute-sea-lion-animal-christmas-card-background.png" />
           </div>
           <p class="DesChris animate-on-scroll animate-desChris">Since it’s the Christmas season, let’s add a little extra cheer with a Christmas Gift Exchange! December wouldn’t be complete without a gift swap, so bring a small gift <a>(minimum RM20)</a> to celebrate the joy of giving and add some sparkle to the night—it’s not just a party; it’s a time for sharing and surprises.</p>
         </div>
